; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_dmtimer.c_omap_dm_timers_active.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_dmtimer.c_omap_dm_timers_active.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_dm_timer = type { i32 }

@dm_timer_count = common dso_local global i32 0, align 4
@dm_timers = common dso_local global %struct.omap_dm_timer* null, align 8
@OMAP_TIMER_CTRL_REG = common dso_local global i32 0, align 4
@OMAP_TIMER_CTRL_ST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omap_dm_timers_active() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.omap_dm_timer*, align 8
  store i32 0, i32* %2, align 4
  br label %4

4:                                                ; preds = %27, %0
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @dm_timer_count, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %30

8:                                                ; preds = %4
  %9 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** @dm_timers, align 8
  %10 = load i32, i32* %2, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.omap_dm_timer, %struct.omap_dm_timer* %9, i64 %11
  store %struct.omap_dm_timer* %12, %struct.omap_dm_timer** %3, align 8
  %13 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %3, align 8
  %14 = getelementptr inbounds %struct.omap_dm_timer, %struct.omap_dm_timer* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %8
  br label %27

18:                                               ; preds = %8
  %19 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %3, align 8
  %20 = load i32, i32* @OMAP_TIMER_CTRL_REG, align 4
  %21 = call i32 @omap_dm_timer_read_reg(%struct.omap_dm_timer* %19, i32 %20)
  %22 = load i32, i32* @OMAP_TIMER_CTRL_ST, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %18
  store i32 1, i32* %1, align 4
  br label %31

26:                                               ; preds = %18
  br label %27

27:                                               ; preds = %26, %17
  %28 = load i32, i32* %2, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %2, align 4
  br label %4

30:                                               ; preds = %4
  store i32 0, i32* %1, align 4
  br label %31

31:                                               ; preds = %30, %25
  %32 = load i32, i32* %1, align 4
  ret i32 %32
}

declare dso_local i32 @omap_dm_timer_read_reg(%struct.omap_dm_timer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
